@@ -7,8 +7,6 @@ lazy val root = (project in file(".")).enablePlugins(PlayScala)
 
 scalaVersion := "2.12.6"
 
-enablePlugins(JavaAppPackaging)
-
 libraryDependencies += guice
 libraryDependencies += "org.scalatestplus.play" %% "scalatestplus-play" % "3.1.2" % Test
 libraryDependencies += javaJdbc
@@ -26,11 +24,3 @@ libraryDependencies += "org.mockito" % "mockito-core" % "2.10.0" % "test"
 // play.sbt.routes.RoutesKeys.routesImport += "mutants_org.binders._"
 
 PlayKeys.externalizeResources := false
-
-javaOptions in Test ++= Seq(
-  "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9998",
-  "-Xms512M",
-  "-Xmx1536M",
-  "-Xss1M",
-  "-XX:MaxPermSize=384M"
-)
